# mrscheme-desktop

./: .gitmodules  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  fr.po
src/: Makefile.am  Makefile.in  authors.h  gtk-mr-scheme-window.c  gtk-mr-scheme-window.h  gtk-mr-scheme.c  gtk-mr-scheme.h  main.c  mrscheme-versionning.c  mrscheme-versionning.h
